playground/pod/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-network-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-test
  template:
    metadata:
      labels:
        app: network-test
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Always
          ports:
            - name: nginx
              protocol: TCP
              containerPort: 80
        - name: node
          image: ezuoo/node-server
          imagePullPolicy: Always
          ports:
            - name: node
              protocol: TCP
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pod-network-test-svc
spec:
#  type: NodePort
  type: ClusterIP
  selector:
    app: network-test
  ports:
    - port: 80
      targetPort: nginx
      protocol: TCP
      name: nginx-svc-port
#      nodePort: 30080
    - port: 3000
      targetPort: node
      protocol: TCP
      name: node-svc-port
#      nodePort: 30081
