playground/pod/node-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-user
  namespace: node
spec:
  replicas: 1
  selector:
    matchLabels:
      domain: user
  template:
    metadata:
      labels:
        app: node-user
        domain: user
    spec:
      containers:
        - name: node-user
          image: ezuoo/node-user:v2
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 500Mi
          ports:
            - name: user
              protocol: TCP
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-test-user-svc
  namespace: node
spec:
  type: NodePort
  selector:
    domain: user
  ports:
    - port: 3000
      targetPort: user
      protocol: TCP
      name: node-user-svc-port
