playground/pod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-test-ing
  namespace: node
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: node-test-user-svc
                port:
                  number: 3000
    - http:
        paths:
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: node-test-book-svc
                port:
                  number: 3000
